--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ import { USER_NAME } from "../consts";
     </svg>
     <p>
       Copyright © <a
-        href="https://www.saroprock.com"
+        href="#"
         target="_blank"
         class="font-bold">{USER_NAME}</a
       >
@@ -33,9 +33,9 @@ import { USER_NAME } from "../consts";
       Powered by
       <!-- Thanks for using this template. You can keep this line to support my work :) -->
       <a
-        href="https://github.com/EveSunMaple/Frosti"
+        href="#"
         target="_blank"
-        class="font-bold">Frosti Template ⚡️</a
+        class="font-bold">FreeGuyBD.netlify.app ⚡️</a
       >
     </p>
   </nav>
